@@ -4,6 +4,8 @@ Change history
 Release Candidate 3
 ===================
 
+- Added a few more RenderView overloads that take a mimeType to configure the Response.ContentType
+
 - If the controller cannot be found, MR searches for a special rescue "rescues/404" before throwing throwing an exception.
 
 - If an action could not be found, we go through normal path an use a general rescue if it can be found for the controller. 
